--- a/global_app/templates/add-deal.html
+++ b/global_app/templates/add-deal.html
@@ -3,67 +3,81 @@
 
 {% block head %}
 
-  <!-- {# <script src="/media/js/editor/map.js" type="text/javascript" charset="utf-8"></script>
+    <!-- {# <script src="/media/js/editor/map.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=en"></script> #}
   -->
 
 
-  <script src="{% static "js/editor/year-based-fields.js" %}" type="text/javascript" charset="utf-8"></script>
-  <script src="{% static "js/editor/livesearch.js" %}" type="text/javascript" charset="utf-8"></script>
-  <script src="{% static "js/editor/add_change.js" %}" type="text/javascript" charset="utf-8"></script>
+    <script src="{% static "js/editor/year-based-fields.js" %}" type="text/javascript" charset="utf-8"></script>
+    <script src="{% static "js/editor/livesearch.js" %}" type="text/javascript" charset="utf-8"></script>
+    <script src="{% static "js/editor/add_change.js" %}" type="text/javascript" charset="utf-8"></script>
+
+    {# map #}
+    <link rel="stylesheet" href="{% static "vendor/openlayers/ol.css" %}"/>
+    <link rel="stylesheet" href="{% static "css/map.css" %}"/>
+
+    <script src="{% static "vendor/openlayers/ol.js" %}" type="text/javascript"></script>
+    <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
+    <script src="{% static "js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>
+    <script>lockMaps()</script>
+
 {% endblock %}
 
 {% block page_title %}Add a deal{% endblock %}
 {% block title %}Add a deal{% endblock %}
 
 {% block breadcrumb %}
-<ul class="breadcrumb">
-  <li><a href="/editor">Editor</a> <span class="divider"></span></li>
-  <li><a href="/en/global/add/">Add a deal</a> <span class="divider"></span></li>
-  <li>Add a deal</li>
-</ul>
+    <ul class="breadcrumb">
+        <li><a href="/editor">Editor</a> <span class="divider"></span></li>
+        <li><a href="/en/global/add/">Add a deal</a> <span class="divider"></span></li>
+        <li>Add a deal</li>
+    </ul>
 {% endblock %}
 
 {% block content %}
 
 
-  <h5>Add a deal</h5>
+    <h5>Add a deal</h5>
 
-  <form action="." method="post" enctype="multipart/form-data">
+    <form action="." method="post" enctype="multipart/form-data">
 
-    {% csrf_token %}
+        {% csrf_token %}
 
-      <div class="panel-group" id="accordion">
+        <div class="panel-group" id="accordion">
 
-        {% if forms %}
+            {% if forms %}
 
-          {% for form in forms %}
+                {% for form in forms %}
 
-            <div class="panel panel-default">
+                    <div class="panel panel-default">
 
 
-                <div class="panel-heading">
-                  <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{forloop.counter}}">
-                      {% if form.forms %}
-                          Formset {{forloop.counter}}: {#{ form }#}
-                      {% else %}      {# form.forms #}
-                          Form {{forloop.counter}}: {#{ form }#}
-                      {% endif %}     {# form.forms #}
-                      <span id="collapsebtn{{forloop.counter}}" class="lm-chevron-circle-up pull-right"></span>
-                    </a>
-                  </h4>
-                </div>
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion"
+                                   href="#collapse{{ forloop.counter }}">
+                                    {{ form.form_title }}
 
-                <div id="collapse{{forloop.counter}}" class="panel-collapse collapse in">
-                  <div class="panel-body">
-                    <table class="i-dont-know-how-to-do-this-in-css-yes-i-know-booh">
-                      {% if form.forms %}
+                                    {% if form.forms %}
+                                        Formset {{ forloop.counter }}: {#{ form }#}
+                                    {% else %}      {# form.forms #}
+                                        Form {{ forloop.counter }}: {#{ form }#}
+                                    {% endif %}     {# form.forms #}
+                                    <span id="collapsebtn{{ forloop.counter }}"
+                                          class="lm-chevron-circle-up pull-right"></span>
+                                </a>
+                            </h4>
+                        </div>
 
-                          {% if form.forms.0.has_investor %}
-                            {{ form }}
+                        <div id="collapse{{ forloop.counter }}" class="panel-collapse collapse in">
+                            <div class="panel-body">
+                                <table class="i-dont-know-how-to-do-this-in-css-yes-i-know-booh">
+                                    {% if form.forms %}
 
-                            {% comment %}
+                                        {% if form.forms.0.has_investor %}
+                                            {{ form }}
+
+                                            {% comment %}
                             <tr>
                               <td>Primary investor:</td>
                               <td>{{ investor.primary_investor.name }}</td>
@@ -77,37 +91,37 @@
                             {% endfor %}
                             {% endcomment %}
 
-                          {% else %}    {# form.forms.0.has_investor #}
+                                        {% else %}    {# form.forms.0.has_investor #}
 
-                            {{ form }}
+                                            {{ form }}
 
-                          {% endif %}   {# form.forms.0.has_investor #}
-                      {% else %}      {# form.forms #}
-                          {{ form.as_table }}
-                      {% endif %}     {# form.forms #}
-                    </table>
-                  </div>
-                </div>
-            </div>            {# class="panel panel-default" #}
+                                        {% endif %}   {# form.forms.0.has_investor #}
+                                    {% else %}      {# form.forms #}
+                                        {{ form.as_table }}
+                                    {% endif %}     {# form.forms #}
+                                </table>
+                            </div>
+                        </div>
+                    </div>            {# class="panel panel-default" #}
 
-            <script>
-                var collapsename = "#collapse{{forloop.counter}}";
-                $(collapsename).on("hidden.bs.collapse", function() {
-                    $("#collapsebtn{{forloop.counter}}").addClass('lm-chevron-circle-down').removeClass('lm-chevron-circle-up');
-                });
-                 $(collapsename).on("shown.bs.collapse", function() {
-                    $("#collapsebtn{{forloop.counter}}").removeClass('lm-chevron-circle-down').addClass('lm-chevron-circle-up');
-                });
-            </script>
+                    <script>
+                        var collapsename = "#collapse{{forloop.counter}}";
+                        $(collapsename).on("hidden.bs.collapse", function () {
+                            $("#collapsebtn{{forloop.counter}}").addClass('lm-chevron-circle-down').removeClass('lm-chevron-circle-up');
+                        });
+                        $(collapsename).on("shown.bs.collapse", function () {
+                            $("#collapsebtn{{forloop.counter}}").removeClass('lm-chevron-circle-down').addClass('lm-chevron-circle-up');
+                        });
+                    </script>
 
-          {% endfor %}
+                {% endfor %}
 
-        {% endif %}           {# forms #}
+            {% endif %}           {# forms #}
 
-    </div>
+        </div>
 
-    <input type="submit" value="Submit" />
+        <input type="submit" value="Submit"/>
 
-  </form>
+    </form>
 
 {% endblock %}
