Legacy js removed

--- a/templates/base.html
+++ b/templates/base.html
@@ -271,7 +271,7 @@
 {% block footer_scripts %}
     <script src="{% static "vendor/bootstrap/dist/js/bootstrap.min.js" %}"></script>
 
-    <script src="{% static "legacy/main.js" %}"></script>
+    <!-- <script src="{% static "legacy/main.js" %}"></script> -->
     <!-- Piwik -->
     <script type="text/javascript">
         var _paq = _paq || [];
