--- a/landmatrix/static/css/map.css
+++ b/landmatrix/static/css/map.css
@@ -116,8 +116,7 @@ p {
 
 table .map {
     position: relative;
-    width: 200px;
-    height: 200px;
+    width: 100%;
     top: 15px;
     margin-bottom: 15px;
     overflow: hidden;
