More social iconfix

--- a/templates/base.html
+++ b/templates/base.html
@@ -264,7 +264,7 @@
             <div class="col-md-4 center">
                 <h4>Share and adapt</h4>
                 <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><span class="lm-creative-commons"></span></a>
-                <a href="https://github.com/sinnwerkstatt/landmatrix"><span class="lm-github-square"></span></a>
+                <a href="https://github.com/sinnwerkstatt/landmatrix"><span class="lm-github"></span></a>
             </div>
             <div class="col-md-4 right">
                 <h4>Sign up to receive updates</h4>
