Menubox mockups converted to links for correct sizing

--- a/templates/base.html
+++ b/templates/base.html
@@ -114,11 +114,11 @@
 
                                 {% endblock %}
                             </ul>
-                            <li>Region 1</li>
+                            <li><a href="#">Region 1</a></li>
                             <li role="separator" class="divider"></li>
-                            <li>Region 2</li>
+                            <li><a href="#">Region 2</a></li>
                             <li role="separator" class="divider"></li>
-                            <li>Region 3</li>
+                            <li><a href="#">Region 3</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -134,13 +134,13 @@
                                     </div>
                                 </form>
                             </li>
-                            <li>Observatory 1</li>
+                            <li><a href="#">Observatory 1</a></li>
                             <li role="separator" class="divider"></li>
-                            <li>Observatory 2</li>
+                            <li><a href="#">Observatory 2</a></li>
                             <li role="separator" class="divider"></li>
-                            <li>Country 1</li>
+                            <li><a href="#">Country 1</a></li>
                             <li role="separator" class="divider"></li>
-                            <li>Country 2</li>
+                            <li><a href="#">Country 2</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
