--- a/global_app/templates/add-deal.html
+++ b/global_app/templates/add-deal.html
@@ -3,11 +3,6 @@
 
 {% block head %}
 
-    <!-- {# <script src="/media/js/editor/map.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=en"></script> #}
-  -->
-
-
     <script src="{% static "js/editor/year-based-fields.js" %}" type="text/javascript" charset="utf-8"></script>
     <script src="{% static "js/editor/livesearch.js" %}" type="text/javascript" charset="utf-8"></script>
     <script src="{% static "js/editor/add_change.js" %}" type="text/javascript" charset="utf-8"></script>
@@ -19,7 +14,7 @@
     <script src="{% static "vendor/openlayers/ol.js" %}" type="text/javascript"></script>
     <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
     <script src="{% static "js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>
-    <script>lockMaps()</script>
+    <script>unlockMaps()</script>
 
 {% endblock %}
 
@@ -30,15 +25,10 @@
     <ul class="breadcrumb">
         <li><a href="/editor">Editor</a> <span class="divider"></span></li>
         <li><a href="/en/global/add/">Add a deal</a> <span class="divider"></span></li>
-        <li>Add a deal</li>
     </ul>
 {% endblock %}
 
 {% block content %}
-
-
-    <h5>Add a deal</h5>
-
     <form action="." method="post" enctype="multipart/form-data">
 
         {% csrf_token %}
@@ -55,17 +45,17 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion"
-                                   href="#collapse{{ forloop.counter }}">
+                                   href="#collapse_{{ forloop.counter }}">
                                     {{ form.form_title }}
-                                    <span id="collapsebtn{{ forloop.counter }}"
+                                    <span id="collapsebtn_{{ forloop.counter }}"
                                           class="lm-chevron-circle-up pull-right"></span>
                                 </a>
                             </h4>
                         </div>
 
-                        <div id="collapse{{ forloop.counter }}" class="panel-collapse collapse in">
+                        <div id="collapse_{{ forloop.counter }}" class="panel-collapse collapse in">
                             <div class="panel-body">
-                                <table class="i-dont-know-how-to-do-this-in-css-yes-i-know-booh">
+                                <table>
                                     {% if form.forms %}
 
                                         {% if form.forms.0.has_investor %}
@@ -99,12 +89,12 @@
                     </div>            {# class="panel panel-default" #}
 
                     <script>
-                        var collapsename = "#collapse{{forloop.counter}}";
+                        var collapsename = "#collapse_{{forloop.counter}}";
                         $(collapsename).on("hidden.bs.collapse", function () {
-                            $("#collapsebtn{{forloop.counter}}").addClass('lm-chevron-circle-down').removeClass('lm-chevron-circle-up');
+                            $("#collapsebtn_{{forloop.counter}}").addClass('lm-chevron-circle-down').removeClass('lm-chevron-circle-up');
                         });
                         $(collapsename).on("shown.bs.collapse", function () {
-                            $("#collapsebtn{{forloop.counter}}").removeClass('lm-chevron-circle-down').addClass('lm-chevron-circle-up');
+                            $("#collapsebtn_{{forloop.counter}}").removeClass('lm-chevron-circle-down').addClass('lm-chevron-circle-up');
                         });
                     </script>
 
